# legal-sentence-demo

./: .gitattributes  .gitignore  Caddyfile  README.md  pyproject.toml  run.py
app/: logger.py  main.py
app/core/: tokenizer.py
app/tokenizers/: __init__.py  charboundary.py  nltk.py  nupunkt.py  pysbd.py  spacy.py
static/js/: app.js  presets.json
templates/: base.html  error.html  index.html  results.html
